# llama2.rs.wasm

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  run.sh
.cargo/: config.toml
.github/workflows/: ci.yml  jekyll-gh-pages.yml  release.yml  rust.yml
port1/: Cargo.toml  LICENSE  README.md
port1/.cargo/: config.toml
port1/src/: lib.rs
port1/www/: .gitignore  index.html
port2/: Cargo.toml  README.md  rustfmt.toml
port2/src/: lib.rs
port2/www/: .gitignore  index.html
port3/: Cargo.toml  README.md
port3/src/: lib.rs
port3/www/: index.html  www_server.py
port4/: Cargo.toml  README.md
port4/src/: lib.rs  llama2.rs  ops.rs
port4/www/: .gitignore  index.html
port5/: Cargo.toml  README.md
port5/src/: lib.rs
port5/src/llama2/: mod.rs  model.rs  quant.rs  sampler.rs  tokenizer.rs  transformer.rs
port5/www/: index.html
port6/: Cargo.toml  README.md
port6/src/: error.rs  lib.rs  llama2.rs  tensor.rs
port6/www/: index.html
src/: lib.rs
www/: index.html
www/pkg_port1/: package.json  port1.d.ts  port1.js  port1_bg.wasm  port1_bg.wasm.d.ts
www/pkg_port1/snippets/wasm-bindgen-rayon-7afa899f36665473/src/: workerHelpers.js
www/pkg_port2/: package.json  port2.d.ts  port2.js  port2_bg.wasm  port2_bg.wasm.d.ts
