[package]
name = "llama2-rs-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
port1 = { path = "./port1" }
port2 = { path = "./port2" }
port3 = { path = "./port3" }
port4 = { path = "./port4" }
port5 = { path = "./port5" }
port6 = { path = "./port6" }
wasm-bindgen-rayon = { version = "1.0", features = ["no-bundler"] }
wasm-bindgen = "0.2"
js-sys = "0.3.65"

[profile.release]
panic = "abort"


[lib]
name = "llama2_rs_wasm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

