[package]
name = "port3"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
console_error_panic_hook = "0.1.7"
console_log = {version="1.0.0",features=["color","wasm-bindgen"]}
js-sys = "0.3.64"
log = "0.4.19"
num_cpus = "1.16.0"
rand = "0.8.5"
rayon = "1.7.0"
wasm-bindgen = "0.2"
wasm-bindgen-rayon = { version = "1.0", features = ["no-bundler"] }
web-sys = {version="0.3.64",features=["Window","Performance","Navigator"]}

[dependencies.getrandom]
version = "0.2.10"
features = ["js"]



[profile.release]
opt-level = 3
debug = false
panic = "abort"
debug-assertions = false
overflow-checks = false
lto = true
incremental = false

[lib]
name="port3"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
