[package]
name = "port4"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap2 = "0.7.1"
rand = "0.8.5"
rayon = { version = "1.7.0" }
wasm-bindgen-rayon = { version = "1.0", features = ["no-bundler"] }
wasm-bindgen = "0.2"
web-sys = {version="0.3.64",features=["Window","Performance","Navigator"]}
console_log = {version="1.0.0",features=["color","wasm-bindgen"]}
console_error_panic_hook = "0.1.7"
log = "0.4.19"
js-sys = "0.3.64"

[dependencies.getrandom]
version = "0.2.10"
features = ["js"]


[profile.release]
opt-level = 3
debug = false
panic = "abort"
debug-assertions = false
overflow-checks = false
lto = true
incremental = false


[lib]
name = "port4"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
